:sparkles: Add Filter for institution name

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             </span>
         </div>
         <button id="reset">Reset Zoom</button>
+        <div class="filter-ctrl">
+            <input id="filter-input" type="text" name="filter" placeholder="Filter Institution by Name" />
+        </div>
         <script src="./mapbox.js"></script>
         <!-- Google Analytics -->
         <script>
