:sparkles: Add Side Buttons
- Add Repo link in a side button
- Add Form to a new institution link in a side button
- Use absolute pixels instead of percentage

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             </span>
         </div>
         <button id="reset">Reset Zoom</button>
+        <button class="side-button add-button"><a href="https://kutt.it/jupyter-map" target="_blank">Add Institution</a></button>
+        <button class="side-button star-button"><a href="https://github.com/ELC/jupyter-map" target="_blank">See the Repo - Give a Star</a></button>
         <div class="filter-ctrl">
             <input id="filter-input" type="text" name="filter" placeholder="Filter Institution by Name" />
         </div>
