:sparkles: Add Social meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
         <script src="https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js"></script>
         <link href="https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css" rel="stylesheet" />
         <link href="style.css" rel="stylesheet" />
-        <title>Jupyter Map</title>
+        <title>Jupyter Education Map &#124; Ezequiel Leonardo Castaño Personal Website</title>
+        
+        <!-- Social -->
+        <meta property="article:author" content="Ezequiel Leonardo Castaño" />
+        <meta property="article:section" content="Programming" />
+        <meta property="article:published_time" content="2018-02-24" />
+
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="Jupyter Education Map &#124; Ezequiel Leonardo Castaño Personal Website"/>
+        <meta property="og:description" content="An online interactive Map to show which universities are using Jupyter Notebooks"/>
+        <meta property="og:site_name" content="Ezequiel Leonardo Castaño Personal Website" />
+        <meta property="og:url" content="https://elc.github.io/jupyter-map/"/>
+        <meta property="og:image" content="https://elc.github.io/jupyter-map/media_image.png"/>
+
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="Jupyter Education Map &#124; Ezequiel Leonardo Castaño Personal Website">
+        <meta name="twitter:description" content="An online interactive Map to show which universities are using Jupyter Notebooks">
+        <meta name="twitter:url" content="https://elc.github.io/jupyter-map/">
+        <meta name="twitter:image" content="https://elc.github.io/jupyter-map/media_image.png">
     </head>
 
     <body>
